re PR c++/13478 (gcc uses wrong constructor to initialize a const reference)

PR c++/13478
	* call.c (convert_like_real): Do not perform an additional
	direct-initialization when binding to a reference.

	PR c++/13478
	* g++.dg/init/ref10.C: New test.

From-SVN: r75979